--- a/src/main/resources/etsiMokkeja.fxml
+++ b/src/main/resources/etsiMokkeja.fxml
@@ -32,18 +32,20 @@
          </font>
       </Label>
       <ListView fx:id="palveluLV" layoutX="38.0" layoutY="299.0" prefHeight="200.0" prefWidth="200.0" />
-      <Button fx:id="findCabinButton" layoutX="38.0" layoutY="550.0" mnemonicParsing="false" onAction="#findThisCabin" text="Etsi" />
+      <Button fx:id="findCabinButton" layoutX="38.0" layoutY="573.0" mnemonicParsing="false" onAction="#findThisCabin" prefHeight="25.0" prefWidth="149.0" text="Etsi vapaita mökkejä" />
       <Label layoutX="506.0" layoutY="41.0" text="Valitse mökki listalta">
          <font>
             <Font size="24.0" />
          </font>
       </Label>
-      <ListView layoutX="506.0" layoutY="93.0" prefHeight="225.0" prefWidth="238.0" />
-      <Label layoutX="506.0" layoutY="350.0" text="Mökin tiedot">
+      <ListView fx:id="valitseMokkiListaltaListView" layoutX="506.0" layoutY="93.0" prefHeight="225.0" prefWidth="238.0" />
+      <Label layoutX="506.0" layoutY="334.0" text="Mökin tiedot">
          <font>
             <Font size="24.0" />
          </font>
       </Label>
-      <TextArea layoutX="506.0" layoutY="399.0" prefHeight="225.0" prefWidth="238.0" />
+      <TextArea fx:id="mokinTiedotTextAres" layoutX="506.0" layoutY="378.0" prefHeight="225.0" prefWidth="238.0" />
+      <Button layoutX="38.0" layoutY="499.0" mnemonicParsing="false" text="Hae palvelut" />
+      <Button fx:id="valitseMökkiButton" layoutX="506.0" layoutY="617.0" mnemonicParsing="false" onAction="#valitseMokki" text="Valitse mökki" />
    </children>
 </AnchorPane>
