--- a/src/main/resources/poistaVaraus.fxml
+++ b/src/main/resources/poistaVaraus.fxml
@@ -3,6 +3,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
@@ -17,7 +18,18 @@
       <TextField layoutX="39.0" layoutY="81.0" promptText="Etunimi" />
       <TextField layoutX="211.0" layoutY="81.0" promptText="Sukunimi" />
       <Button fx:id="findReservationButton" layoutX="39.0" layoutY="129.0" mnemonicParsing="false" onAction="#findReservations" text="Etsi varaukset" />
-      <ListView layoutX="39.0" layoutY="186.0" prefHeight="200.0" prefWidth="200.0" />
-      <Button fx:id="deleteReservationButton" layoutX="39.0" layoutY="412.0" mnemonicParsing="false" onAction="#deleteThisReservation" text="Poista varaus" />
+      <Label layoutX="40.0" layoutY="190.0" text="Lista varauksista">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Label>
+      <ListView layoutX="39.0" layoutY="218.0" prefHeight="200.0" prefWidth="200.0" />
+      <Button fx:id="deleteReservationButton" layoutX="40.0" layoutY="425.0" mnemonicParsing="false" onAction="#deleteThisReservation" text="Poista varaus" />
+      <Label layoutX="318.0" layoutY="190.0" text="Varauksen tiedot">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Label>
+      <TextArea editable="false" layoutX="318.0" layoutY="218.0" prefHeight="200.0" prefWidth="200.0" />
    </children>
 </AnchorPane>
