--- a/src/main/resources/etsiMokkeja.fxml
+++ b/src/main/resources/etsiMokkeja.fxml
@@ -45,7 +45,7 @@
          </font>
       </Label>
       <TextArea fx:id="mokinTiedotTextAres" layoutX="506.0" layoutY="378.0" prefHeight="225.0" prefWidth="238.0" />
-      <Button layoutX="38.0" layoutY="499.0" mnemonicParsing="false" text="Hae palvelut" />
+      <Button fx:id="haePalvelutButton" layoutX="38.0" layoutY="499.0" mnemonicParsing="false" onAction="#haePalvelutEtsiMokki" text="Hae palvelut" />
       <Button fx:id="valitseMökkiButton" layoutX="506.0" layoutY="617.0" mnemonicParsing="false" onAction="#valitseMokki" text="Valitse mökki" />
    </children>
 </AnchorPane>
