Laskujen hallinta toimii kutakuinkin. Pitää vain saada se vielä näyttämään tietoja palveluista. Se myös tulostaa nyt pdf-tiedoston.

--- a/src/main/resources/laskujenHallinta.fxml
+++ b/src/main/resources/laskujenHallinta.fxml
@@ -4,7 +4,6 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextArea?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
@@ -25,30 +24,9 @@
             <Font size="14.0" />
          </font>
       </Label>
-      <ListView layoutX="31.0" layoutY="110.0" prefHeight="200.0" prefWidth="180.0" />
-      <TextArea editable="false" layoutX="238.0" layoutY="110.0" prefHeight="200.0" prefWidth="200.0" />
-      <Label layoutX="34.0" layoutY="360.0" text="Täytä laskun tiedot">
-         <font>
-            <Font size="24.0" />
-         </font>
-      </Label>
-      <TextField layoutX="31.0" layoutY="407.0" promptText="Asiakkaan etunimi" />
-      <TextField layoutX="189.0" layoutY="407.0" promptText="Asiakkaan sukunimi" />
-      <TextField layoutX="31.0" layoutY="449.0" promptText="Asiakkaan lähiosoite" />
-      <TextField layoutX="189.0" layoutY="449.0" promptText="Asiakkaan sähköposti" />
-      <TextField layoutX="31.0" layoutY="488.0" promptText="Asiakkaan puh" />
-      <TextField layoutX="189.0" layoutY="488.0" promptText="Laskun summa" />
-      <TextField layoutX="31.0" layoutY="526.0" promptText="Laskun alv" />
-      <Label layoutX="357.0" layoutY="368.0" text="Valitse palvelut">
-         <font>
-            <Font size="14.0" />
-         </font>
-      </Label>
-      <ListView layoutX="357.0" layoutY="390.0" prefHeight="143.0" prefWidth="200.0" />
-      <TextField layoutX="357.0" layoutY="553.0" promptText="Palveluiden summa" />
-      <TextField layoutX="357.0" layoutY="590.0" promptText="Palvelun alv" />
-      <Button fx:id="createEmailInvoiceButton" layoutX="578.0" layoutY="390.0" mnemonicParsing="false" onAction="#createEmailInvoice" text="Luo sähköpostilasku" />
-      <Button fx:id="createPaperInvoiceButton" layoutX="578.0" layoutY="432.0" mnemonicParsing="false" onAction="#createPaperInvoice" text="Luo paperilasku" />
-      <Button layoutX="31.0" layoutY="318.0" mnemonicParsing="false" text="Hee varaukset" />
+      <ListView fx:id="varauksetListView" layoutX="31.0" layoutY="110.0" prefHeight="200.0" prefWidth="180.0" />
+      <TextArea fx:id="varauksenTiedotTextArea" editable="false" layoutX="238.0" layoutY="110.0" prefHeight="200.0" prefWidth="275.0" />
+      <Button fx:id="createEmailInvoiceButton" layoutX="139.0" layoutY="318.0" mnemonicParsing="false" onAction="#createEmailInvoice" text="Luo lasku" />
+      <Button fx:id="haeVarauksetButton" layoutX="31.0" layoutY="318.0" mnemonicParsing="false" onAction="#haeVarauksetLaskutus" text="Hae varaukset" />
    </children>
 </AnchorPane>
