--- a/src/main/resources/poistaVaraus.fxml
+++ b/src/main/resources/poistaVaraus.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="900.0" prefWidth="720.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="oma.grafiikka.ot1.Controller">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="oma.grafiikka.ot1.Controller">
    <children>
       <Label layoutX="39.0" layoutY="29.0" text="Anna asiakkaan nimi:">
          <font>
@@ -17,7 +17,7 @@
       </Label>
       <TextField layoutX="39.0" layoutY="81.0" promptText="Etunimi" />
       <TextField layoutX="211.0" layoutY="81.0" promptText="Sukunimi" />
-      <Button fx:id="findReservationButton" layoutX="39.0" layoutY="129.0" mnemonicParsing="false" onAction="#findReservations" text="Etsi varaukset" />
+      <Button fx:id="findReservationButton" layoutX="39.0" layoutY="148.0" mnemonicParsing="false" onAction="#findReservations" text="Etsi varaukset" />
       <Label layoutX="40.0" layoutY="190.0" text="Lista varauksista">
          <font>
             <Font size="18.0" />
@@ -31,5 +31,6 @@
          </font>
       </Label>
       <TextArea editable="false" layoutX="318.0" layoutY="218.0" prefHeight="200.0" prefWidth="200.0" />
+      <TextField layoutX="39.0" layoutY="114.0" promptText="Puhelinnumero" />
    </children>
 </AnchorPane>
