--- a/src/main/resources/poistaVaraus.fxml
+++ b/src/main/resources/poistaVaraus.fxml
@@ -1,36 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.TextArea?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="oma.grafiikka.ot1.Controller">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="oma.grafiikka.ot1.Controller">
    <children>
       <Label layoutX="39.0" layoutY="29.0" text="Anna asiakkaan nimi:">
          <font>
             <Font size="24.0" />
          </font>
       </Label>
-      <TextField layoutX="39.0" layoutY="81.0" promptText="Etunimi" />
-      <TextField layoutX="211.0" layoutY="81.0" promptText="Sukunimi" />
+      <TextField fx:id="haeVarauspoistoEnimi" layoutX="39.0" layoutY="81.0" promptText="Etunimi" />
+      <TextField fx:id="haeVVarauspoistoSnimi" layoutX="211.0" layoutY="81.0" promptText="Sukunimi" />
       <Button fx:id="findReservationButton" layoutX="39.0" layoutY="148.0" mnemonicParsing="false" onAction="#findReservations" text="Etsi varaukset" />
       <Label layoutX="40.0" layoutY="190.0" text="Lista varauksista">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
-      <ListView layoutX="39.0" layoutY="218.0" prefHeight="200.0" prefWidth="200.0" />
+      <ListView fx:id="varausPoistoLV" layoutX="39.0" layoutY="218.0" prefHeight="200.0" prefWidth="200.0" />
       <Button fx:id="deleteReservationButton" layoutX="40.0" layoutY="425.0" mnemonicParsing="false" onAction="#deleteThisReservation" text="Poista varaus" />
       <Label layoutX="318.0" layoutY="190.0" text="Varauksen tiedot">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
-      <TextArea editable="false" layoutX="318.0" layoutY="218.0" prefHeight="200.0" prefWidth="200.0" />
-      <TextField layoutX="39.0" layoutY="114.0" promptText="Puhelinnumero" />
+      <TextArea fx:id="varausPoistoTiedotTA" editable="false" layoutX="318.0" layoutY="218.0" prefHeight="200.0" prefWidth="200.0" />
+      <TextField fx:id="haeVarauspoistoPuhnro" layoutX="39.0" layoutY="114.0" promptText="Puhelinnumero" />
    </children>
 </AnchorPane>
